# remote_work_coffee_shops_website

./: README.md  constants.py  forms.py  main.py  pyproject.toml
templates/: add_cafe.html  admin.html  admin_cafes.html  admin_delete_cafe.html  admin_navbar.html  admin_users.html  cafe_info.html  footer.html  header.html  index.html  login.html  register.html  report_closure.html
