[tool.poetry]
name = "coffee-shops-remote-work"
version = "0.1.0"
description = ""
authors = ["MCDAngelo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.0"
wtforms = "3.0.1"
flask-wtf = "1.2.1"
werkzeug = "3.0.0"
flask-sqlalchemy = "3.1.1"
sqlalchemy = "2.0.25"
bootstrap-flask = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
